Bird game almost done

--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@tanstack/react-query": "^4.24.4",
     "@tonconnect/ui-react": "^2.0.0-beta.2",
     "@twa-dev/sdk": "^6.4.2",
+    "@types/three": "^0.165.0",
     "buffer": "^6.0.3",
     "is-mobile": "^3.1.1",
+    "lil-gui": "^0.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
+    "three": "^0.165.0",
     "ton": "13.3.0",
     "ton-core": "^0.46.0",
     "ton-crypto": "^3.2.0",
